# Sky-Imaging

./: .buildinfo  .gitattributes  .gitignore  README.md  camera_data.html  environment.yml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: camera_data.doctree  environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/asi_core/: index.doctree
.doctrees/autoapi/asi_tools/: index.doctree
.doctrees/manual/: asi_physical_setup.doctree  asi_setup.doctree  docs_daq.doctree  ftps_upload.doctree  geom_self_calibration.doctree  getting_started.doctree  index.doctree  mask_creation.doctree
.doctrees/manual/templates/: self_calibration_cfg.doctree
.github/workflows/: gh_pages.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/asi_core/: index.rst.txt
_sources/autoapi/asi_tools/: index.rst.txt
_sources/manual/: asi_physical_setup.md.txt  asi_setup.md.txt  docs_daq.md.txt  ftps_upload.md.txt  index.md.txt
asi_core/camera/: mobotix.py  obstacle_mask.py  ocam.py  sky_imager.py
asi_core/camera/calibration/: celestial_bodies.py  self_calibration.py
asi_core/config/: constants.py
asi_core/dlr/: matlab_converters.py
asi_core/image/: asi_dataset.py  circumsolar.py  transform.py
asi_core/image/hdr/: calibration.py  merge.py  pipeline.py  utils.py
asi_core/meteo/: __init__.py  downloading_datasets.py  meteo.py
asi_core/real_time/: http_image_receiver.py  image_folder_monitor.py  meteo_data_log.py  meteo_data_opcua.py  meteo_data_weblog.py  utils.py
asi_core/utils/: basics.py  daily_h5.py  datetime_handling.py  filesystem.py  geometry.py  image_time_series.py  mattermost_notifier.py
asi_core/visualization/: asi_keogram.py  density_scatter.py  interactive.py  masking.py  sky_videos.py  timeseries.py  video.py
asi_tools/calibration/: __main__.py  process_self_calibration.py
asi_tools/daq/: __main__.py  image_acquisition_simulator.py
asi_tools/datacheck/: create_HDR_video.py  daily_video_tools.py  plot_asi_availability.py
asi_tools/hdr/: __main__.py  calibration.py
asi_tools/mask_creation/auto/: __main__.py
asi_tools/mask_creation/manual/: __main__.py  mask_creation.py  mask_creation_cfg.yaml
asi_tools/undistortion/: __main__.py  undistortion.yaml
autoapi/: index.html
autoapi/asi_core/: index.html
autoapi/asi_core/camera/: index.html
autoapi/asi_core/config/: index.html
autoapi/asi_core/dlr/: index.html
autoapi/asi_core/image/: index.html
autoapi/asi_core/meteo/: index.html
autoapi/asi_core/real_time/: index.html
autoapi/asi_core/utils/: index.html
autoapi/asi_core/visualization/: index.html
autoapi/asi_tools/: index.html
autoapi/asi_tools/calibration/: index.html
autoapi/asi_tools/daq/: index.html
autoapi/asi_tools/datacheck/: index.html
data/camera_data/: ASI_Template.yaml
docs/: camera_data.rst  conf.py  index.rst
docs/manual/: docs_daq.md  geom_self_calibration.md  index.md  mask_creation.md
manual/: asi_physical_setup.html  asi_setup.html  docs_daq.html  ftps_upload.html  geom_self_calibration.html  getting_started.html  index.html  mask_creation.html
manual/templates/: self_calibration_cfg.html
(+204 files in other folders)
